application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    name: helloworld
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    "app.kubernetes.io/name": helloworld
