application/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
  - "*"
  gateways:
  - helloworld-gateway
  http:
  - match:
    - uri:
        prefix: /helloz
    route:
    - destination:
        host: helloworld.dev.svc.cluster.local
#        subset: v1
        port:
          number: 80
#      weight: 50
#    - destination:
#        host: helloworld.dev.svc.cluster.local
#        subset: v2
#      weight: 50
